--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "./index.html",
   "id": "biblia-iasd-app",
   "scope": "./",
-  "display": "standalone",
+  "display": "fullscreen",
   "orientation": "portrait",
   "background_color": "#1a100e",
   "theme_color": "#3e2723",
@@ -66,5 +66,5 @@
       "icons": [{ "src": "https://cdn-icons-png.flaticon.com/512/3004/3004458.png", "sizes": "192x192", "type": "image/png" }]
     }
   ],
-  "categories": ["books", "education", "lifestyle"]
+  "categories": ["education", "books", "music"]
 }
